--- a/Test.html
+++ b/Test.html
@@ -1,5 +1,34 @@
-<body id="7jkai"></body>
-<script >
-  var kao = localStorage.getItem("InterCodeForWebCodeEditorYesForGithub");
-  document.getElementById("7jkai").innerHTML = kao;
-</script>
+
+<iframe
+
+  id="7jkai"
+
+  srcdoc="<h1>Oops.. something Went wrong</h1>"
+
+  style="
+
+    position: fixed;
+
+    top: 0px;
+
+    bottom: 0px;
+
+    right: 0px;
+
+    width: 100%;
+
+    border: none;
+
+    margin: 0;
+
+    padding: 0;
+
+    overflow: hidden;
+
+    z-index: 999999;
+
+    height: 100%;
+
+  ">Sorry.. your browser doesn't support<code >Iframe</code></iframe><script >var kao = localStorage.getItem("InterCodeForWebCodeEditorYesForGithub");document.getElementById("7jkai").srcdoc= kao;</script>
+
+
