--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ function setWordSp(otem,num){
     if(localStorage.getItem("InterCodeForWebCodeEditorYesForGithub") == undefined || localStorage.getItem("InterCodeForWebCodeEditorYesForGithub") == null){
       console.log("no recent saves..")
     }else{
-      document.getElementById("mainn").value = localStorage.getItem("InterCodeForWebCodeEditorYesForGithub")+"[last save]";
+      document.getElementById("mainn").value = localStorage.getItem("InterCodeForWebCodeEditorYesForGithub")+"<!--[last save]-->";
     }
     
 </script>
